--- a/manifest/fastapi.yml
+++ b/manifest/fastapi.yml
@@ -2,19 +2,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: heart-disease-deployment
+  name: heart-ml-deployment
 spec:
   selector:
     matchLabels:
-      app: heart-disease-server
+      app: heart-ml-server
   replicas: 1
   template:
     metadata:
       labels:
-        app: heart-disease-server
+        app: heart-ml-server
     spec:
       containers:
-        - name: heart-disease-container
+        - name: heart-ml-container
           #image: gcr.io/tensorflow-serving/resnet
           image: docker.io/joseemanuel/fastapiml:latest
           ports:
@@ -24,12 +24,12 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    run: heart-disease-service
-  name: heart-disease-service
+    run: heart-ml-service
+  name: heart-ml-service
 spec:
   ports:
     - port: 80
       targetPort: 80
   selector:
-    app: heart-disease-server
+    app: heart-ml-server
   type: LoadBalancer
