--- a/.github/workflows/ml_ci_cd.yml
+++ b/.github/workflows/ml_ci_cd.yml
@@ -18,4 +18,7 @@ jobs:
       run: python --version
     - name: pip install
       run: python install -r requirements.txt
+    - name: train model
+      run: python model/train.py
+
 
