--- a/.github/workflows/ml_ci_cd.yml
+++ b/.github/workflows/ml_ci_cd.yml
@@ -13,11 +13,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: python version
       run: python --version
-
-    - name: python version
-      run: python --version
     - name: pip install
-      run: python install -r requirements.txt
+      run: pip install -r requirements.txt
     - name: train model
       run: python model/train.py
 
