--- a/.github/workflows/ml_ci_cd.yml
+++ b/.github/workflows/ml_ci_cd.yml
@@ -28,5 +28,15 @@ jobs:
     - name: docker Push
       run: docker push ${{secrets.DOCKER_USER}}/${{secrets.MODEL_NAME}}:${{ github.sha }}
 
+    - name: update docker user in fastapi
+      run: sed -i 's/{docker_user}/${{secrets.DOCKER_USER}}/g' manifests/fastapi.yml
+    - name: update model name in fastapi 
+      run: sed -i 's/{model_name}/${{secrets.MODEL_NAME}}/g' manifests/fastapi.yml
+    - name: update _ by - 
+      run: sed -i 's/_/-/g' manifests/fastapi.yml
+    - name: update sha in fastapi
+      run: sed -i 's/{github.sha}/${{ github.sha }}/g' manifests/fastapi.yml
+    - name: show fastapi.yml 
+      run: cat manifests/fastapi.yml
 
 
